--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
+torch>=1.10.0,<1.13.0
+torchvision==0.11.1
+timm<0.9.0
 tqdm
 einops
 addict
 yapf
-inplace_abn
+numpy
+pandas
+matplotlib
+pillow
+opencv-python
+pycocotools
+tensorboard
+scipy
